--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
       env:
         ARMA3_TOOLS_URL: ${{ inputs.toolsUrl }}
       run: |
-        if (!($IsWindows && $IsLinux)) {
+        if (!($IsWindows || $IsLinux)) {
           throw "Unsupported OS"
         }
 
