--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,7 @@ runs:
         } elseif ($IsLinux) {
           Invoke-Expression "unzip arma3tools.zip -d ~/.local/share/arma3tools"
 
+          sudo apt-get update
           sudo apt-get install -y wine64
         }
 
